
    o	library() now checks the dependence on R version (if any) and
	warns if the package was built under a later version of R.

    o	warning() has new argument `call.', like stop()'s.

    o	zip.file.extract() is no longer provisional and has an
	"internal" method available on all platforms.

    o	New read-only connections to files in zip files via unz().

    o   The tcltk package now works with the gnome user interface.

    o   chol() allows pivoting via new argument `pivot'.

    o   acosh(), asinh(), atanh() are guaranteed to be available.

    o   New na.action function na.pass() passes through NAs unaltered.

    o   piechart() has been renamed to pie(), as piechart is a Trellis
	function for arrays of pie charts.  The default fill colours
	are now a set of pastel shades, rather than par("bg").

    o	Changes in package ts:

	-  More emphasis on handling time series with missing values
	   where possible, for example in acf() and in the
	   ARIMA-fitting functions.

	-  New function arima() which will replace arima0() in due
           course.  Meanwhile, arima0() has been enhanced in several
           ways.  Missing values are accepted.  Parameter values can
           be initialized and can held fixed during fitting.  There is
           a new argument `method' giving the option to use
           conditional-sum-of-squares estimation.

	-  New function arima.sim().

	-  New datasets Nile, UKgas and WWWusage, and a expanded
           version of UKDriverDeaths (as a multiple time series Seatbelts).

	-  New generic function tsdiag() and methods for arima and arima0,
	   to produce diagnostic plots.  Supersedes arima0.diag().

	-  New functions ARMAacf() and ARMAtoMA() to compute
           theoretical quantities for an ARMA process.

	-  New function acf2AR() to compute the AR process with a given
           autocorrelation function.

    o   Much improved printing of matrices and arrays of type "list".
