@@ -1843,6 +1843,25 @@ caddr_t hello() {
 	       [r_cv_zlib_mmap=yes]))
 ])# _R_ZLIB_MMAP
 
+
+## R_BZLIB
+## ------
+## Try finding bzlib library and headers.
+## We check that both are installed,
+## and that BZ2_bzlibVersion is in the library.
+AC_DEFUN([R_BZLIB],
+[AC_CHECK_LIB(bz2, BZ2_bzlibVersion, [have_bzlib=yes], [have_bzlib=no])
+if test "${have_bzlib}" = yes; then
+  AC_CHECK_HEADER(bzlib.h, [have_bzlib=yes], [have_bzlib=no])
+fi
+if test "${have_bzlib}" = yes; then
+  AC_DEFINE(HAVE_BZLIB, 1,
+            [Define if you have the bzip2 headers and libraries.])
+  LIBS="-lbz2 ${LIBS}"
+fi
+])# R_BZLIB
+
+
 ## R_SYS_POSIX_LEAPSECONDS
 ## -----------------------
 ## See if your system time functions do not count leap seconds, as
