@@ -20,7 +20,7 @@ capabilities(what = NULL)
     \item{X11}{(Unix)  Are \code{X11} and the data editor available?}
     \item{GNOME}{(Unix)  Is the GNOME GUI in use and are \code{GTK} and
       \code{GNOME} graphics devices available?}
-    \item{libz}{Is \code{\link{gzfile}} available? As of \R 1.5.0 this
+    \item{libz}{Is \code{\link{gzfile}} available?  From \R 1.5.0 this
       will always be true.}
     \item{http/ftp}{Are \code{\link{url}} and the internal method for
       \code{\link{download.file}} available?}
@@ -38,6 +38,7 @@ capabilities(what = NULL)
     \item{IEEE754}{Does this platform have IEEE 754 arithmetic?  Note
       that this is more correctly known by the international standard
       IEC 60059.}
+    \item{bzip2}{Is \code{\link{bzfile}} available?}
     }
 }
 \seealso{\code{\link{.Platform}}}
