@@ -42,7 +42,8 @@ SEXP do_readDCF(SEXP call, SEXP op, SEXP args, SEXP env)
     if(!con->canread)
         error("cannot read from this connection");
     wasopen = con->isopen;
-    if(!wasopen) con->open(con);
+    if(!wasopen)
+	if(!con->open(con)) error("cannot open the connection");
 
     PROTECT(what = coerceVector(CADR(args), STRSXP));
     nwhat = LENGTH(what);
