@@ -725,7 +725,7 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 	wasopen = con->isopen; 
 	if(!wasopen) {
 	    strcpy(con->mode, "r");
-	    con->open(con);
+	    if(!con->open(con)) error("cannot open the connection");
 	}
 	for (i = 0; i < nskip; i++)
 	    while ((c = scanchar(FALSE)) != '\n' && c != R_EOF);
@@ -810,7 +810,7 @@ SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
 	wasopen = con->isopen; 
 	if(!wasopen) {
 	    strcpy(con->mode, "r");
-	    con->open(con);
+	    if(!con->open(con)) error("cannot open the connection");
 	}
 	for (i = 0; i < nskip; i++)
 	    while ((c = scanchar(FALSE)) != '\n' && c != R_EOF);
@@ -1199,7 +1199,7 @@ SEXP do_readtablehead(SEXP call, SEXP op, SEXP args, SEXP rho)
     wasopen = con->isopen; 
     if(!wasopen) {
 	strcpy(con->mode, "r");
-	con->open(con);
+	if(!con->open(con)) error("cannot open the connection");
     } else { /* for a non-blocking connection, more input may
 		have become available, so re-position */
 	if(con->canseek && !con->blocking)
